# LogicCalculator

./: CMakeLists.txt  Interpretor.md  README.md
LogicInterpreter/: Assign.h  Calculator.h  InfixExpression.h  Operator.h  Outputer.h  PublicMethod.h  QuickCalculator.h  SampleOutput.md  Stack.h  Translate.h  Variables.h  main.cpp  output.md
